fixes to images

--- a/src/components/GalleryPaintingsSeries/GalleryPaintingsSeries.index.astro
+++ b/src/components/GalleryPaintingsSeries/GalleryPaintingsSeries.index.astro
@@ -8,9 +8,9 @@ import ContainerGalleries from "../ContainerGalleries.astro";
 
 <ContainerGalleries>
   <div class="columns-3xs xl:columns-4">
-    <GalleryPaintingsSeriesGroup1 />
-    <GalleryPaintingsSeriesGroup2 />
-    <GalleryPaintingsSeriesGroup3 />
-    <GalleryPaintingsSeriesGroup4 />
+    <GalleryPaintingsSeriesGroup1 preload="webp" />
+    <GalleryPaintingsSeriesGroup2 preload="webp" />
+    <GalleryPaintingsSeriesGroup3 preload="webp" />
+    <GalleryPaintingsSeriesGroup4 preload="webp" />
   </div>
 </ContainerGalleries>
