--- a/src/components/GalleryVeniceSeries/GalleryVeniceSeriesGroup1.astro
+++ b/src/components/GalleryVeniceSeries/GalleryVeniceSeriesGroup1.astro
@@ -1,10 +1,24 @@
 ---
 import PictureWrapper from "../PictureWrapper.astro";
+export interface Props {
+  preload?: string;
+}
+
+const { preload } = Astro.props as Props;
 ---
 
-<PictureWrapper src="/src/images/veniceSeries/VE-flexn1.png" title="VE-flexn 1"
+<PictureWrapper
+  src="/src/images/veniceSeries/VE-flexn1.png"
+  title="VE-flexn 1"
+  preload={preload}
 />
-<PictureWrapper src="/src/images/veniceSeries/VE-flexn5.png" title="VE-flexn 5"
+<PictureWrapper
+  src="/src/images/veniceSeries/VE-flexn5.png"
+  title="VE-flexn 5"
+  preload={preload}
 />
-<PictureWrapper src="/src/images/veniceSeries/VE-flexn9.png" title="VE-flexn 9"
+<PictureWrapper
+  src="/src/images/veniceSeries/VE-flexn9.png"
+  title="VE-flexn 9"
+  preload={preload}
 />
