--- a/src/components/LandingHero.astro
+++ b/src/components/LandingHero.astro
@@ -8,6 +8,7 @@ import HeroText from "./HeroText.astro";
   src="/src/images/firstgallery/3Through.png"
   objectPosition="80% 80%"
   {...sharedPictureProps}
+  width={1181}
   loading="eager"
   artDirectives={[
     {
