--- a/src/components/MainGallery.astro
+++ b/src/components/MainGallery.astro
@@ -16,17 +16,17 @@ import ContainerGalleries from "./ContainerGalleries.astro";
 
 <ContainerGalleries>
   <div class="columns-3xs xl:columns-4">
-    <GalleryPaintingsSeriesGroup1 />
-    <GalleryVeniceSeriesGroup1 />
-    <GalleryTurinSeriesGroup1 />
-    <GalleryPaintingsSeriesGroup2 />
-    <GalleryVeniceSeriesGroup2 />
-    <GalleryTurinSeriesGroup2 />
-    <GalleryPaintingsSeriesGroup3 />
-    <GalleryVeniceSeriesGroup3 />
-    <GalleryTurinSeriesGroup3 />
-    <GalleryPaintingsSeriesGroup4 />
-    <GalleryVeniceSeriesGroup4 />
-    <GalleryTurinSeriesGroup4 />
+    <GalleryPaintingsSeriesGroup1 preload="undefined" />
+    <GalleryVeniceSeriesGroup1 preload="undefined" />
+    <GalleryTurinSeriesGroup1 preload="undefined" />
+    <GalleryPaintingsSeriesGroup2 preload="undefined" />
+    <GalleryVeniceSeriesGroup2 preload="undefined" />
+    <GalleryTurinSeriesGroup2 preload="undefined" />
+    <GalleryPaintingsSeriesGroup3 preload="undefined" />
+    <GalleryVeniceSeriesGroup3 preload="undefined" />
+    <GalleryTurinSeriesGroup3 preload="undefined" />
+    <GalleryPaintingsSeriesGroup4 preload="undefined" />
+    <GalleryVeniceSeriesGroup4 preload="undefined" />
+    <GalleryTurinSeriesGroup4 preload="undefined" />
   </div>
 </ContainerGalleries>
