--- a/src/components/BaseIcon.astro
+++ b/src/components/BaseIcon.astro
@@ -10,5 +10,8 @@ export interface Props {
 const { name, title, sizes = 6, color = "" } = Astro.props as Props;
 ---
 
-<Icon name={name} class={`w-${sizes} h-${sizes} ${color}`} fill="currentColor"
+<Icon
+  name={name}
+  class={`w-${sizes} h-${sizes} ${color}`}
+  fill="currentColor"
 /><span class="sr-only">{title}</span>
