--- a/src/components/GalleryPaintingsSeries/GalleryPaintingsSeriesGroup1.astro
+++ b/src/components/GalleryPaintingsSeries/GalleryPaintingsSeriesGroup1.astro
@@ -1,17 +1,39 @@
 ---
 import PictureWrapper from "../PictureWrapper.astro";
+export interface Props {
+  preload?: string | undefined;
+}
+
+const { preload } = Astro.props as Props;
 ---
 
 <PictureWrapper
   src="/src/images/firstgallery/1PlanetEarth.png"
   title="Planet Earth"
+  preload={preload}
 />
-<PictureWrapper src="/src/images/firstgallery/5Accademia.png" title="Accademia"
+<PictureWrapper
+  src="/src/images/firstgallery/5Accademia.png"
+  title="Accademia"
+  preload={preload}
 />
-<PictureWrapper src="/src/images/firstgallery/9South.png" title="South" />
+<PictureWrapper
+  src="/src/images/firstgallery/9South.png"
+  title="South"
+  preload={preload}
+/>
 <PictureWrapper
   src="/src/images/secondGallery/1Accademiatoo.png"
   title="Accademia too"
+  preload={preload}
 />
-<PictureWrapper src="/src/images/secondGallery/5Temple.png" title="Temple" />
-<PictureWrapper src="/src/images/secondGallery/9Time.png" title="Time" />
+<PictureWrapper
+  src="/src/images/secondGallery/5Temple.png"
+  title="Temple"
+  preload={preload}
+/>
+<PictureWrapper
+  src="/src/images/secondGallery/9Time.png"
+  title="Time"
+  preload={preload}
+/>
