--- a/src/components/GalleryTurinSeries/GalleryTurinSeries.index.astro
+++ b/src/components/GalleryTurinSeries/GalleryTurinSeries.index.astro
@@ -8,9 +8,9 @@ import ContainerGalleries from "../ContainerGalleries.astro";
 
 <ContainerGalleries>
   <div class="columns-3xs xl:columns-4">
-    <GalleryTurinSeriesGroup1 />
-    <GalleryTurinSeriesGroup2 />
-    <GalleryTurinSeriesGroup3 />
-    <GalleryTurinSeriesGroup4 />
+    <GalleryTurinSeriesGroup1 preload="webp" />
+    <GalleryTurinSeriesGroup2 preload="webp" />
+    <GalleryTurinSeriesGroup3 preload="webp" />
+    <GalleryTurinSeriesGroup4 preload="webp" />
   </div>
 </ContainerGalleries>
