--- a/src/components/GalleryTurinSeries/GalleryTurinSeriesGroup1.astro
+++ b/src/components/GalleryTurinSeries/GalleryTurinSeriesGroup1.astro
@@ -1,16 +1,24 @@
 ---
 import PictureWrapper from "../PictureWrapper.astro";
+export interface Props {
+  preload?: string;
+}
+
+const { preload } = Astro.props as Props;
 ---
 
 <PictureWrapper
   src="/src/images/torinoSeries/ReflexTOn.1.png"
   title="ReflexTOn 1"
+  preload={preload}
 />
 <PictureWrapper
   src="/src/images/torinoSeries/ReflexTOn.3.png"
   title="ReflexTOn 3"
+  preload={preload}
 />
 <PictureWrapper
   src="/src/images/torinoSeries/ReflexTOn.5.png"
   title="ReflexTOn 5"
+  preload={preload}
 />
