--- a/src/components/GalleryTurinSeries/GalleryTurinSeriesGroup2.astro
+++ b/src/components/GalleryTurinSeries/GalleryTurinSeriesGroup2.astro
@@ -1,16 +1,24 @@
 ---
 import PictureWrapper from "../PictureWrapper.astro";
+export interface Props {
+  preload?: string;
+}
+
+const { preload } = Astro.props as Props;
 ---
 
 <PictureWrapper
   src="/src/images/torinoSeries/ReflexTOn.2.png"
   title="ReflexTOn 2"
+  preload={preload}
 />
 <PictureWrapper
   src="/src/images/torinoSeries/ReflexTOn.4.png"
   title="ReflexTOn 4"
+  preload={preload}
 />
 <PictureWrapper
   src="/src/images/torinoSeries/ReflexTOn.6.png"
   title="ReflexTOn 6"
+  preload={preload}
 />
