--- a/src/components/GalleryVeniceSeries/GalleryVeniceSeries.index.astro
+++ b/src/components/GalleryVeniceSeries/GalleryVeniceSeries.index.astro
@@ -8,9 +8,9 @@ import ContainerGalleries from "../ContainerGalleries.astro";
 
 <ContainerGalleries>
   <div class="columns-3xs xl:columns-4">
-    <GalleryVeniceSeriesGroup1 />
-    <GalleryVeniceSeriesGroup2 />
-    <GalleryVeniceSeriesGroup3 />
-    <GalleryVeniceSeriesGroup4 />
+    <GalleryVeniceSeriesGroup1 preload="webp" />
+    <GalleryVeniceSeriesGroup2 preload="webp" />
+    <GalleryVeniceSeriesGroup3 preload="webp" />
+    <GalleryVeniceSeriesGroup4 preload="webp" />
   </div>
 </ContainerGalleries>
