--- a/src/components/GalleryVeniceSeries/GalleryVeniceSeriesGroup2.astro
+++ b/src/components/GalleryVeniceSeries/GalleryVeniceSeriesGroup2.astro
@@ -1,12 +1,24 @@
 ---
 import PictureWrapper from "../PictureWrapper.astro";
+export interface Props {
+  preload?: string;
+}
+
+const { preload } = Astro.props as Props;
 ---
 
-<PictureWrapper src="/src/images/veniceSeries/VE-flexn2.png" title="VE-flexn 2"
+<PictureWrapper
+  src="/src/images/veniceSeries/VE-flexn2.png"
+  title="VE-flexn 2"
+  preload={preload}
 />
-<PictureWrapper src="/src/images/veniceSeries/VE-flexn6.png" title="VE-flexn 6"
+<PictureWrapper
+  src="/src/images/veniceSeries/VE-flexn6.png"
+  title="VE-flexn 6"
+  preload={preload}
 />
 <PictureWrapper
   src="/src/images/veniceSeries/VE-flexn10.png"
   title="VE-flexn 10"
+  preload={preload}
 />
