--- a/src/components/PictureWrapper.astro
+++ b/src/components/PictureWrapper.astro
@@ -5,13 +5,20 @@ import "../styles/imagesOverlayEffect.css";
 export interface Props {
   src: string;
   title: string;
+  preload?: string | undefined;
 }
 
-const { src, title } = Astro.props as Props;
+const { src, title, preload } = Astro.props as Props;
 ---
 
 <div class="picture-container mb-2">
-  <Picture src={src} alt={`artwork called ${title}`} {...sharedPictureProps} />
+  <Picture
+    src={src}
+    alt={`artwork called ${title}`}
+    {...sharedPictureProps}
+    width={530}
+    preload={preload}
+  />
   <div
     class="overlay absolute inset-0 z-[2] h-full w-full opacity-0 transition duration-300 ease-out"
   >
