--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,11 +1,11 @@
 <div class="ml-8 md:ml-16 lg:ml-20 2xl:ml-28 pt-32 lg:pt-[10%]">
   <h2 class="text-white format font-['Playfair_Display'] leading-none">
     <strong
-      class="font-black text-4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-[9rem]"
+      class="font-black text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-[7rem]"
       >LUCA <br /> PONTRANDOLFO</strong
     >
     <div
-      class="font-normal text-3xl md:text-4xl lg:text-5xl xl:text-6xl 2xl:text-[7rem]"
+      class="font-normal text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-[5rem]"
     >
       PORTFOLIO
     </div>
